--- a/index.html
+++ b/index.html
@@ -5,123 +5,185 @@
 <title>BBC Radio Player</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- hls.js ONLY for desktop -->
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
 <style>
 :root {
-  --glass: rgba(20,20,30,0.65);
-  --border: #4b4bff;
+  --glass: rgba(20,20,35,0.65);
+  --border: rgba(120,120,255,0.6);
   --accent: #7a7aff;
-  --blur: 18px;
+  --blur: 22px;
 }
 
-* { box-sizing: border-box; font-family: system-ui; }
+* {
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont;
+}
 
 body {
   margin: 0;
   min-height: 100vh;
-  background: #0b0b14;
+  background:
+    radial-gradient(circle at top, rgba(120,120,255,0.15), transparent 60%),
+    url("bg.png") center/cover no-repeat fixed;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
+  overflow: hidden;
 }
 
-/* ===== WINDOW ===== */
+/* ===== MAIN WINDOW ===== */
 .window {
   width: 1100px;
   height: 760px;
   backdrop-filter: blur(var(--blur));
   background: var(--glass);
-  border: 2px solid var(--border);
-  border-radius: 20px;
+  border: 1px solid var(--border);
+  border-radius: 22px;
   display: grid;
   grid-template-columns: 380px 1fr;
   padding: 22px;
   gap: 22px;
+  box-shadow: 0 30px 80px rgba(0,0,0,0.45);
+  animation: windowIn 0.8s ease;
 }
 
-/* ===== LEFT ===== */
+/* ===== LEFT PANEL ===== */
 .left {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 14px;
+  align-items: center;
+  text-align: center;
 }
 
 .album {
   width: 300px;
   height: 300px;
-  border-radius: 18px;
-  border: 2px solid var(--border);
+  border-radius: 22px;
+  border: 1px solid var(--border);
   overflow: hidden;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.5);
 }
+
 .album img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  animation: breathe 7s ease-in-out infinite;
 }
 
-.station-name { font-size: 28px; font-weight: 700; }
-.now-playing { font-size: 14px; opacity: 0.85; }
-.metadata { font-size: 15px; color: #d6d6ff; min-height: 20px; }
+.album.playing img {
+  animation: pulse 1.8s ease-in-out infinite;
+}
+
+.station-name {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.now-playing {
+  font-size: 14px;
+  opacity: 0.85;
+}
+
+.metadata {
+  font-size: 15px;
+  color: #d6d6ff;
+  min-height: 20px;
+}
 
 button {
-  background: rgba(80,80,255,0.35);
+  margin-top: 6px;
+  background: linear-gradient(135deg, rgba(120,120,255,0.6), rgba(80,80,255,0.35));
   border: 1px solid var(--border);
   color: white;
-  padding: 14px;
-  border-radius: 14px;
+  padding: 14px 22px;
+  border-radius: 16px;
   cursor: pointer;
   font-size: 18px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-/* ===== RIGHT ===== */
+button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 25px rgba(120,120,255,0.35);
+}
+
+/* ===== RIGHT PANEL ===== */
 .right {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 12px;
+  padding-right: 6px;
 }
 
 .station {
   display: flex;
   align-items: center;
   gap: 14px;
-  padding: 12px;
-  border-radius: 14px;
+  padding: 14px;
+  border-radius: 16px;
   border: 1px solid var(--border);
   background: rgba(0,0,0,0.25);
   cursor: pointer;
+  transition: transform 0.25s ease, background 0.25s ease;
 }
-.station img {
-  width: 48px;
-  border-radius: 10px;
+
+.station:hover {
+  transform: translateX(6px);
+  background: rgba(120,120,255,0.25);
 }
+
 .station.active {
-  background: rgba(120,120,255,0.35);
+  background: rgba(120,120,255,0.45);
+}
+
+.station img {
+  width: 50px;
+  border-radius: 12px;
 }
 
 /* ===== MOBILE ===== */
 @media (max-width: 900px) {
-  body { align-items: flex-start; }
+  body {
+    align-items: flex-start;
+  }
 
   .window {
     width: 100%;
     height: 100vh;
-    grid-template-columns: 1fr;
     border-radius: 0;
+    grid-template-columns: 1fr;
     padding: 16px;
   }
-
-  .left { align-items: center; text-align: center; }
 
   .album {
     width: 220px;
     height: 220px;
   }
 
-  button { width: 100%; }
+  button {
+    width: 100%;
+  }
+}
+
+/* ===== ANIMATIONS ===== */
+@keyframes breathe {
+  0%,100% { transform: scale(1); }
+  50% { transform: scale(1.03); }
+}
+
+@keyframes pulse {
+  0%,100% { transform: scale(1); }
+  50% { transform: scale(1.05); }
+}
+
+@keyframes windowIn {
+  from { opacity: 0; transform: scale(0.95) translateY(20px); }
+  to { opacity: 1; transform: scale(1) translateY(0); }
 }
 </style>
 </head>
@@ -129,7 +191,7 @@ button {
 
 <div class="window">
   <div class="left">
-    <div class="album">
+    <div class="album" id="album">
       <img id="cover" src="icons/bbc1.png">
     </div>
     <div id="stationName" class="station-name">BBC Radio 1</div>
@@ -144,10 +206,8 @@ button {
 <audio id="audio" playsinline></audio>
 
 <script>
-/* ===== PLATFORM DETECTION ===== */
 const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 
-/* ===== STATIONS ===== */
 const stations = [
   { name:"BBC Radio 1", icon:"icons/bbc1.png",
     url:"https://as-hls-ww-live.akamaized.net/pool_01505109/live/ww/bbc_radio_one/bbc_radio_one.isml/bbc_radio_one-audio%3d96000.norewind.m3u8" },
@@ -167,54 +227,55 @@ const audio = document.getElementById("audio");
 const list = document.getElementById("stations");
 const playBtn = document.getElementById("playBtn");
 const metadata = document.getElementById("metadata");
+const album = document.getElementById("album");
+
 let current = stations[0];
 let hls;
 
-/* ===== BUILD LIST ===== */
+/* Build station list */
 stations.forEach((s,i)=>{
-  const d=document.createElement("div");
-  d.className="station"+(i===0?" active":"");
-  d.innerHTML=`<img src="${s.icon}"><span>${s.name}</span>`;
-  d.onclick=()=>{
-    document.querySelectorAll(".station").forEach(e=>e.classList.remove("active"));
-    d.classList.add("active");
-    current=s;
-    cover.src=s.icon;
-    stationName.textContent=s.name;
-    metadata.textContent="Tap Play";
+  const el = document.createElement("div");
+  el.className = "station" + (i===0 ? " active" : "");
+  el.innerHTML = `<img src="${s.icon}"><span>${s.name}</span>`;
+  el.onclick = () => {
+    document.querySelectorAll(".station").forEach(x=>x.classList.remove("active"));
+    el.classList.add("active");
+    current = s;
+    cover.src = s.icon;
+    stationName.textContent = s.name;
+    metadata.textContent = "Tap Play";
+    album.classList.remove("playing");
   };
-  list.appendChild(d);
+  list.appendChild(el);
 });
 
-/* ===== PLAY LOGIC (THIS IS THE FIX) ===== */
+/* Play logic */
 playBtn.onclick = () => {
-  metadata.textContent="Connecting…";
+  metadata.textContent = "Connecting…";
 
   if (isIOS) {
-    // ✅ iOS: native HLS ONLY
     audio.src = current.url;
     audio.load();
     audio.play().then(()=>{
-      metadata.textContent="Live broadcast";
-    }).catch(()=>{
-      metadata.textContent="Tap again to play";
+      metadata.textContent = "Live broadcast";
+      album.classList.add("playing");
     });
-
   } else {
-    // ✅ Desktop
     if (Hls.isSupported()) {
       if (hls) hls.destroy();
       hls = new Hls();
       hls.loadSource(current.url);
       hls.attachMedia(audio);
-      hls.on(Hls.Events.MANIFEST_PARSED, () => {
+      hls.on(Hls.Events.MANIFEST_PARSED, ()=>{
         audio.play();
-        metadata.textContent="Live broadcast";
+        metadata.textContent = "Live broadcast";
+        album.classList.add("playing");
       });
     } else {
       audio.src = current.url;
       audio.play();
-      metadata.textContent="Live broadcast";
+      metadata.textContent = "Live broadcast";
+      album.classList.add("playing");
     }
   }
 };
