--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ const stations = [
   {
     name:"BBC World Service",
     icon:"icons/worldservice.png",
-    stream:"http://as-hls-ww-live.akamaized.net/pool_87948813/live/ww/bbc_world_service/bbc_world_service.isml/bbc_world_service-audio%3d96000.norewind.m3u8",
+    stream:"http://stream.live.vc.bbcmedia.co.uk/bbc_world_service",
     service:"bbc_world_service"
   }
 ];
