--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ const stations = [
   {
     name:"BBC World Service",
     icon:"icons/worldservice.png",
-    stream:"http://stream.live.vc.bbcmedia.co.uk/bbc_world_service",
+    stream:"http://a.files.bbci.co.uk/media/live/manifesto/audio/simulcast/hls/nonuk/sbr_low/ak/bbc_world_service.m3u8",
     service:"bbc_world_service"
   }
 ];
